# zalgoify

./: README.md  pyproject.toml  zalgo.txt
tests/: test_zalgoify.py
zalgoify/: __init__.py  __main__.py
