[tool.poetry]
name = "zalgoify"
version = "0.1.0"
description = ""
authors = ["bitbloxhub <45184892+bitbloxhub@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
